--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^8.12.2",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.15",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "multer": "^2.0.2"
   },
   "engines": {
     "node": "22.x"
